# close_enough

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
src/closest/: hash.rs  mod.rs  slice.rs
src/diff/: i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  isize.rs  mod.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  usize.rs
